# PhotoFaceClassifier

./: .gitignore  README.md  build.sh  operating_systems.txt  session-ses_4676.md  start-backend.sh  start-electron.sh  start-frontend.sh
backend/: .gitignore  README.md  backend.spec  build.sh  main.py  pyproject.toml
backend/data/: config.json  faces.db
backend/models/: database.py  schemas.py
backend/services/: clustering.py  face_processor.py  folder_manager.py  raw_handler.py
frontend/: .gitignore  package.json  vite.config.ts
frontend/electron/: main.cjs  preload.cjs
frontend/public/: icon.icns
frontend/src/: App.tsx  api.ts  electron.d.ts  main.tsx
frontend/src/contexts/: ExportContext.tsx
frontend/src/pages/: ExportPage.tsx  PeoplePage.tsx  ScanPage.tsx  SettingsPage.tsx
