[project]
name = "face-classifier-backend"
version = "0.1.0"
description = "Face classification backend for photo organization"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "rawpy>=0.22.0",
    "facenet-pytorch>=2.6.0",
    "hdbscan>=0.8.38",
    "scikit-learn>=1.5.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services", "models"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
build = [
    "pyinstaller>=6.0.0",
]
